:zap: Fix the flickering problem

--- a/src/Top.module.scss
+++ b/src/Top.module.scss
@@ -15,9 +15,17 @@
 
     img,
     video {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+
+    img {
+        z-index: 2;
+        transition: opacity .2s ease-in-out;
     }
 }
 
@@ -25,5 +33,6 @@
     position: relative;
     width: 100vw;
     height: 100%;
+    z-index: 3;
     background: radial-gradient(50% 50% at 50% 50%, rgba(0, 0, 0, 0) 0%, #191B1F 100%);
 }
